--- a/04_reinforcement-learning/pytorch/01_04_01-framework.ipynb
+++ b/04_reinforcement-learning/pytorch/01_04_01-framework.ipynb
@@ -23,13 +23,16 @@
     "        - 行動決定: `(現在の状態) -> (次の行動)`\n",
     "    - 実装:\n",
     "        - 表形式方策: 予め設定された方策パラメータ（行動確率）に従って行動を決定\n",
-    "- 記録者 (Recorder): エージェントの状態・行動を記録するための機能\n",
+    "- 軌道 (Trajectory): エージェントの状態・行動を記録するための機能\n",
     "    - インターフェイス:\n",
     "        - 記録取得: `() -> (記録データ)`\n",
     "        - 記録実行: `(現在の実行, 次の行動)!`\n",
     "    - 実装:\n",
     "        - 配列式記録者: 状態・行動のタプルを配列にして記録する\n",
     "- 強化学習環境 (Env): エージェントの行動や状態等の環境を定義するための機能\n",
+    "    - ラッパー:\n",
+    "        - 方策: `() -> (方策)`\n",
+    "        - 軌道: `() -> (軌道)`\n",
     "    - インターフェイス:\n",
     "        - 行動空間取得: `() -> (行動空間)`\n",
     "        - 状態空間取得: `() -> (状態空間)`\n",
@@ -47,24 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling NaNStatistics [b946abbf-3ea7-4610-9019-9858bfdeaf2d]\n",
-      "└ @ Base loading.jl:1423\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "execute! (generic function with 1 method)"
+       "execute!"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,55 +67,35 @@
    "source": [
     "using NaNStatistics, Distributions\n",
     "\n",
-    "\"再定義可能な構造体を定義するマクロ\"\n",
-    "macro restruct(exp)\n",
-    "    tmpname = \"var\\\"$(gensym())\\\"\"\n",
-    "    mutable = exp.args[1] ? \"mutable\" : \"\"\n",
-    "    name, extend = if typeof(exp.args[2]) === Expr\n",
-    "        if exp.args[2].head === :curly\n",
-    "            (exp.args[2].args[1], \"{$(exp.args[2].args[2])}\")\n",
-    "        else\n",
-    "            (exp.args[2].args[1], \"<: $(exp.args[2].args[2])\")\n",
-    "        end\n",
-    "    else\n",
-    "        (exp.args[2], \"\")\n",
-    "    end\n",
-    "    structcode = join(exp.args[3].args, \";\")\n",
-    "\n",
-    "    Meta.parse(\n",
-    "        \"Base.@kwdef $mutable struct $(tmpname)$(extend) $structcode end; $name = $tmpname\"\n",
-    "    ) |> eval\n",
-    "end\n",
-    "\n",
-    "\"再定義可能な型定義を行うマクロ\"\n",
-    "macro retype(exp)\n",
-    "    tmpname = \"var\\\"$(gensym())\\\"\"\n",
-    "    name = exp.args[1]\n",
-    "    Meta.parse(\"$(exp.head) type $tmpname end; $name = $tmpname\") |> eval\n",
-    "end\n",
+    "# 再定義可能な構造体を定義するマクロ等を使えるようにする\n",
+    "include(\"./inc/retype.jl\")\n",
     "\n",
     "#=\n",
     "方策\n",
     "- Interface:\n",
     "    - 行動決定(行動空間, 状態)\n",
     "=#\n",
-    "@retype abstract type RLPolicy end\n",
+    "@retype abstract type Policy end\n",
     "\n",
-    "(::RLPolicy)(action_space, state) = \"(::RLPolicy)(action_space, state) -> (next_action): Determine next action from the current state.\"\n",
+    "# インターフェイス定義のための関数は、実装されずに使われることを想定していないので例外処理を定義しておく\n",
+    "(::Policy)(action_space, state) = error(\"(::Policy)(action_space, state) -> (next_action): Determine next action from the current state.\")\n",
     "\n",
     "#=\n",
-    "記録者\n",
+    "軌道\n",
     "- Interface:\n",
     "    - 記録取得\n",
     "    - 記録実行(状態, 次の行動)\n",
     "=#\n",
-    "@retype abstract type RLRecorder end\n",
+    "@retype abstract type Trajectory end\n",
     "\n",
-    "records(::RLRecorder) = \"records(::RLRecorder) -> (records::Vector): Get the records.\"\n",
-    "(::RLRecorder)(state, next_action) = \"(::RLRecorder)(state, next_action): Record the current state and next action.\"\n",
+    "(::Trajectory)() = error(\"(::Trajectory)() -> (records::Vector): Get the records.\")\n",
+    "(::Trajectory)(state, next_action) = error(\"(::Trajectory)(state, next_action): Record the current state and next action.\")\n",
     "\n",
     "#=\n",
     "強化学習環境\n",
+    "- Wrapper:\n",
+    "    - 方策\n",
+    "    - 軌道\n",
     "- Interface:\n",
     "    - 行動空間取得\n",
     "    - 状態空間取得\n",
@@ -130,27 +105,68 @@
     "    - 現在の状態取得\n",
     "    - 状態遷移!(行動)\n",
     "- Function:\n",
-    "    - 行動決定(方策)\n",
+    "    - 行動決定\n",
+    "    - 記録実行!\n",
     "    - シナリオ実行!(方策, 記録)\n",
     "=#\n",
-    "@retype abstract type RLEnv end\n",
+    "@retype abstract type Env end\n",
     "\n",
-    "action_space(::RLEnv) = \"action_space(::RLEnv) -> (actions::Union{Vector, Tuple}): Get actions of the environment.\"\n",
-    "state_space(::RLEnv) = \"state_space(::RLEnv) -> (states::Union{Vector, Tuple}): Get states of the environment.\"\n",
-    "reward(::RLEnv) = \"reward(::RLEnv) -> (reward): Get reward of the environment.\"\n",
-    "is_terminated(::RLEnv) = \"is_terminated(::RLEnv) -> (is_terminated::Bool): Determine if the environment is terminated.\"\n",
-    "init!(::RLEnv) = \"init!(::RLEnv): Initialize the environment.\"\n",
-    "state(::RLEnv) = \"state(::RLEnv) -> (state): Get the current state of the environment.\"\n",
-    "(::RLEnv)(action) = \"(::RLEnv)(action): Execute the action to transition to the next state.\"\n",
+    "policy(::Env) = error(\"policy(::Env) -> (policy::Policy): Policy of the environment.\")\n",
+    "trajectory(::Env) = error(\"trajectory(::Env) -> (trajectory::Trajectory): Trajectory of the environment.\")\n",
     "\n",
-    "next_action(env::RLEnv, policy::RLPolicy) = policy(action_space(env), state(env))\n",
+    "action_space(::Env) = error(\"action_space(::Env) -> (actions::Union{Vector, Tuple}): Get actions of the environment.\")\n",
+    "state_space(::Env) = error(\"state_space(::Env) -> (states::Union{Vector, Tuple}): Get states of the environment.\")\n",
+    "reward(::Env) = error(\"reward(::Env) -> (reward): Get reward of the environment.\")\n",
+    "is_terminated(::Env) = error(\"is_terminated(::Env) -> (is_terminated::Bool): Determine if the environment is terminated.\")\n",
+    "init!(::Env) = error(\"init!(::Env): Initialize the environment.\")\n",
+    "current_state(::Env) = error(\"current_state(::Env) -> (state): Get the current state of the environment.\")\n",
+    "(::Env)(action) = error(\"(::Env)(action): Execute the action to transition to the next state.\")\n",
     "\n",
-    "execute!(env::RLEnv, policy::RLPolicy, recorder::RLRecorder; max_step::Int = -1) = begin\n",
+    "\"\"\"\n",
+    "    next_action(env::Env, state = nothing) = (action)\n",
+    "\n",
+    "方策に従って次の行動を決定\n",
+    "\n",
+    "- `state`: 現在の状態\n",
+    "    - nothing の場合: `current_state(env)` が設定される\n",
+    "    - nothing 以外の場合: 指定された値が設定される\n",
+    "\"\"\"\n",
+    "next_action(env::Env; state = nothing) = (action_space(env), isnothing(state) ? current_state(env) : state) |> policy(env)\n",
+    "\n",
+    "\"\"\"\n",
+    "    record!(env::Env, state = nothing, action = nothing)\n",
+    "\n",
+    "現在の状態と次の行動を記録\n",
+    "\n",
+    "- `state`: 現在の状態\n",
+    "    - nothing の場合: `current_state(env)` が設定される\n",
+    "    - nothing 以外の場合: 指定された値が設定される\n",
+    "- `action`: 次の行動\n",
+    "    - nothing の場合: `next_action(env)` が設定される\n",
+    "    - nothing 以外の場合: 指定された値が設定される\n",
+    "\"\"\"\n",
+    "record!(env::Env; state = nothing, action = nothing) = begin\n",
+    "    state = isnothing(state) ? current_state(env) : state\n",
+    "    action = isnothing(action) ? next_action(env) : action\n",
+    "    (state, action) |> trajectory(env)\n",
+    "end\n",
+    "\n",
+    "\"\"\"\n",
+    "    execute!(env::Env; max_step::Int = 0) = (n_steps::Int)\n",
+    "\n",
+    "環境終了までエージェントを行動させ、実行ステップ数を返す\n",
+    "\n",
+    "- `max_step::Int`: 最大ステップ数\n",
+    "    - 0 より大きい場合: 環境の終了条件を満たすか指定したステップ数に達した時点で終了する\n",
+    "    - 0 以下の場合: 環境の終了条件を満たすまで無限ループする\n",
+    "\"\"\"\n",
+    "execute!(env::Env; max_step::Int = 0) = begin\n",
     "    n_steps = 0\n",
     "    init!(env)\n",
     "    while !is_terminated(env)\n",
-    "        action = next_action(env, policy)\n",
-    "        recorder(state(env), action) # Record the history.\n",
+    "        state = current_state(env)\n",
+    "        action = next_action(env; state = state)\n",
+    "        record!(env; state = state, action = action) # Record the history.\n",
     "        env(action) # Transition to the next state.\n",
     "\n",
     "        n_steps += 1\n",
@@ -159,7 +175,7 @@
     "        end\n",
     "    end\n",
     "    # Record the final state.\n",
-    "    recorder(state(env), nothing)\n",
+    "    record!(env; action = NaN)\n",
     "\n",
     "    n_steps\n",
     "end"
@@ -167,27 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tabler_policy"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"実装\"\n",
     "#=\n",
     "表形式方策\n",
     "- 行動決定: (状態) -> (次の行動)\n",
     "=#\n",
-    "@restruct mutable struct TablerPolicy <: RLPolicy\n",
+    "@restruct mutable struct TablerPolicy <: Policy\n",
     "    pi::Matrix{<:AbstractFloat} # 行動の採用確率\n",
     "end\n",
     "\n",
@@ -199,17 +204,16 @@
     "end\n",
     "\n",
     "#=\n",
-    "配列式記録者\n",
+    "配列式軌道\n",
     "- 記録取得: () -> (記録)\n",
     "- 記録実行: (状態, 次の行動)!\n",
     "=#\n",
-    "@restruct mutable struct ArrayRecorder <: RLRecorder\n",
+    "@restruct mutable struct ArrayTrajectory <: Trajectory\n",
     "    records::Array{<:NamedTuple} = Array{NamedTuple}([]) # [(state = 状態, action = 行動), ...]\n",
     "end\n",
     "\n",
-    "records(recorder::ArrayRecorder) = recorder.records\n",
-    "\n",
-    "(recorder::ArrayRecorder)(state, next_action) = push!(recorder.records, (state = state, action = next_action))\n",
+    "(trajectory::ArrayTrajectory)() = trajectory.records\n",
+    "(trajectory::ArrayTrajectory)(state, next_action) = push!(trajectory.records, (state = state, action = next_action))\n",
     "\n",
     "\"エージェントの行動: 上、右、下、左移動\"\n",
     "@enum MazeAction UP=1 RIGHT DOWN LEFT\n",
@@ -217,8 +221,22 @@
     "\"迷路問題の状態: S0(START), S1, ..., S8(GOAL)\"\n",
     "@enum MazeState S0=1 S1 S2 S3 S4 S5 S6 S7 S8\n",
     "\n",
+    "\"迷路問題の初期行動重み\"\n",
+    "MazeEnvInitialTheta = [\n",
+    "    NaN  1.0  1.0  NaN  # S0での移動可能方向: →, ↓\n",
+    "    NaN  1.0  NaN  1.0  # S1での移動可能方向: →, ←\n",
+    "    NaN  1.0  1.0  1.0  # S2での移動可能方向: ↓, ←\n",
+    "    1.0  1.0  1.0  NaN  # S3での移動可能方向: ↑, →, ↓\n",
+    "    NaN  NaN  1.0  1.0  # S4での移動可能方向: ↓, ←\n",
+    "    1.0  NaN  NaN  NaN  # S5での移動可能方向: ↑\n",
+    "    1.0  NaN  NaN  NaN  # S6での移動可能方向: ↑\n",
+    "    1.0  1.0  NaN  NaN  # S7での移動可能方向: ↑, →\n",
+    "]\n",
+    "\n",
     "#=\n",
     "迷路問題環境\n",
+    "- 方策: () -> (方策)\n",
+    "- 軌道: () -> (軌道)\n",
     "- 行動空間取得: () -> (行動空間)\n",
     "- 状態空間取得: () -> (状態空間)\n",
     "- 報酬取得: () -> (報酬)\n",
@@ -227,7 +245,13 @@
     "- 現在の状態取得: () -> (現在の状態)\n",
     "- 状態遷移: (行動)!\n",
     "=#\n",
-    "@restruct mutable struct MazeEnv <: RLEnv\n",
+    "@restruct mutable struct MazeEnv <: Env\n",
+    "    # 方策\n",
+    "    policy::TablerPolicy = TablerPolicy(zeros(8, 4))\n",
+    "\n",
+    "    # 軌道\n",
+    "    trajectory::ArrayTrajectory = ArrayTrajectory()\n",
+    "\n",
     "    # 行動空間: ↑, →, ↓, ← 移動\n",
     "    actions = Int.(instances(MazeState))\n",
     "\n",
@@ -237,53 +261,53 @@
     "    # 状態: エージェントのいる位置\n",
     "    state = Int(S0)\n",
     "\n",
-    "    # 行動の重み\n",
-    "    theta::Matrix{<:Number} = [\n",
-    "        NaN  1.0  1.0  NaN  # S0での移動可能方向: →, ↓\n",
-    "        NaN  1.0  NaN  1.0  # S1での移動可能方向: →, ←\n",
-    "        NaN  1.0  1.0  1.0  # S2での移動可能方向: ↓, ←\n",
-    "        1.0  1.0  1.0  NaN  # S3での移動可能方向: ↑, →, ↓\n",
-    "        NaN  NaN  1.0  1.0  # S4での移動可能方向: ↓, ←\n",
-    "        1.0  NaN  NaN  NaN  # S5での移動可能方向: ↑\n",
-    "        1.0  NaN  NaN  NaN  # S6での移動可能方向: ↑\n",
-    "        1.0  1.0  NaN  NaN  # S7での移動可能方向: ↑, →\n",
-    "    ]\n",
-    "\n",
     "    # 状態遷移\n",
     "    # - 上: 状態 - 3\n",
     "    # - 右: 状態 + 1\n",
     "    # - 下: 状態 + 3\n",
     "    # - 左: 状態 - 1\n",
     "    state_transitions = (-3, +1, +3, -1)\n",
+    "\n",
+    "    # 行動の重み: 8x4-Matrix\n",
+    "    theta::Matrix{<:Number} = zeros(8, 4)\n",
     "end\n",
+    "\n",
+    "\"行動の重みパラメータ設定: 初期化時に MazeEnvInitialTheta を設定すること\"\n",
+    "set_theta!(env::MazeEnv, theta::Matrix{<:Number}) = begin\n",
+    "    env.theta = theta\n",
+    "\n",
+    "    #=\n",
+    "    迷路問題の表形式方策を作成する\n",
+    "    - 行動の重み θ から、行動の採用確率 π_θ に変換する\n",
+    "    - 例: S0 [NaN 1.0 1.0 NaN] の場合\n",
+    "        - 行動の採用確率は [0.0 0.5 0.5 0.0] となる\n",
+    "    =#\n",
+    "    env.policy.pi =\n",
+    "        # 各値をその行での割合 (値 / その行の合計値) に変換\n",
+    "        ## NaN 値を無視して合計を出すには NaNStatistics.nansum を使うと良い\n",
+    "        env.theta ./ nansum(env.theta, dims = 2) |>\n",
+    "            # NaN 値を 0.0 に変換する\n",
+    "            theta -> map(theta) do t isnan(t) ? 0.0 : t end \n",
+    "end\n",
+    "\n",
+    "policy(env::MazeEnv) = env.policy\n",
+    "trajectory(env::MazeEnv) = env.trajectory\n",
     "\n",
     "action_space(env::MazeEnv) = env.actions\n",
     "state_space(env::MazeEnv) = env.states\n",
     "reward(env::MazeEnv) = is_terminated(env) ? 1.0 : 0.0 # ゴールした時点で初めて報酬発生\n",
     "is_terminated(env::MazeEnv) = env.state === Int(S8)\n",
-    "init!(env::MazeEnv) = env.state = Int(S0)\n",
-    "state(env::MazeEnv) = env.state\n",
-    "(env::MazeEnv)(action::Int) = env.state += env.state_transitions[action]\n",
-    "\n",
-    "\"\"\"\n",
-    "迷路問題の表形式方策を作成する\n",
-    "\n",
-    "- 行動の重み θ から、行動の採用確率 π_θ に変換する\n",
-    "- 例: S0 [NaN 1.0 1.0 NaN] の場合\n",
-    "    - 行動の採用確率は [0.0 0.5 0.5 0.0] となる\n",
-    "\"\"\"\n",
-    "tabler_policy(env::MazeEnv) = TablerPolicy(\n",
-    "    # 各値をその行での割合 (値 / その行の合計値) に変換\n",
-    "    ## NaN 値を無視して合計を出すには NaNStatistics.nansum を使うと良い\n",
-    "    env.theta ./ nansum(env.theta, dims = 2) |>\n",
-    "        # NaN 値を 0.0 に変換する\n",
-    "        theta -> map(theta) do t isnan(t) ? 0.0 : t end\n",
-    ")"
+    "init!(env::MazeEnv) = begin\n",
+    "    set_theta!(env, MazeEnvInitialTheta)\n",
+    "    env.state = Int(S0)\n",
+    "end\n",
+    "current_state(env::MazeEnv) = env.state\n",
+    "(env::MazeEnv)(action::Int) = env.state += env.state_transitions[action]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +316,7 @@
        "save_anim"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,24 +401,24 @@
     "end\n",
     "\n",
     "\"\"\"\n",
-    "    save_anim(::MazeEnv, recorder::ArrayRecorder, save_filename::String)\n",
+    "    save_anim(::MazeEnv, save_filename::String)\n",
     "\n",
     "迷路内をエージェントがゴールするまで移動させた記録を動画ファイルに保存する関数\n",
     "\"\"\"\n",
-    "save_anim(env::MazeEnv, recorder::ArrayRecorder, save_filename::String) = begin\n",
+    "save_anim(env::MazeEnv, save_filename::String) = begin\n",
     "    # 初期プロット描画\n",
     "    fig, plt, ax, state_positions = plot(env)\n",
     "    agent_pos = plot!(env, plt, state_positions[1])\n",
     "\n",
     "    # 動画作成\n",
-    "    data = records(recorder)\n",
-    "    n_data = length(data)\n",
-    "    record(fig, save_filename, 1:n_data;\n",
-    "        # data を10秒でアニメーションさせるように framerate 設定\n",
-    "        framerate = ceil(Int, n_data / 10)\n",
+    "    records = trajectory(env)()\n",
+    "    n_records = length(records)\n",
+    "    record(fig, save_filename, 1:n_records;\n",
+    "        # records を10秒でアニメーションさせるように framerate 設定\n",
+    "        framerate = ceil(Int, n_records / 10)\n",
     "    ) do frame\n",
     "        # エージェント位置更新\n",
-    "        agent_pos[] = state_positions[data[frame].state]\n",
+    "        agent_pos[] = state_positions[records[frame].state]\n",
     "\n",
     "        # プロットタイトル更新\n",
     "        ax.title = \"Step: $frame\"\n",
@@ -404,35 +428,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.177386 seconds (564.88 k allocations: 33.068 MiB, 7.21% gc time, 99.86% compilation time)\n"
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching (::var\"##302\")(::Tuple{NTuple{9, Int64}, Int64})\n\u001b[0mClosest candidates are:\n\u001b[0m  (::var\"##302\")(::Union{Tuple, Vector}, \u001b[91m::Int64\u001b[39m) at In[8]:10\n\u001b[0m  (::var\"##296\")(::Any, \u001b[91m::Any\u001b[39m) at In[3]:14",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching (::var\"##302\")(::Tuple{NTuple{9, Int64}, Int64})\n\u001b[0mClosest candidates are:\n\u001b[0m  (::var\"##302\")(::Union{Tuple, Vector}, \u001b[91m::Int64\u001b[39m) at In[8]:10\n\u001b[0m  (::var\"##296\")(::Any, \u001b[91m::Any\u001b[39m) at In[3]:14",
+      "",
+      "Stacktrace:",
+      " [1] |>(x::Tuple{NTuple{9, Int64}, Int64}, f::var\"##302\")",
+      "   @ Base .\\operators.jl:966",
+      " [2] next_action(env::var\"##304\"; state::Int64)",
+      "   @ Main .\\In[3]:67",
+      " [3] execute!(env::var\"##304\"; max_step::Int64)",
+      "   @ Main .\\In[3]:101",
+      " [4] execute!(env::var\"##304\")",
+      "   @ Main .\\In[3]:97",
+      " [5] top-level scope",
+      "   @ .\\timing.jl:220 [inlined]",
+      " [6] top-level scope",
+      "   @ .\\In[12]:0",
+      " [7] eval",
+      "   @ .\\boot.jl:373 [inlined]",
+      " [8] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1196"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\"迷路問題をランダムに解く\"\n",
     "\n",
     "env = MazeEnv() # 迷路問題環境\n",
-    "policy = tabler_policy(env) # 表形式方策\n",
-    "recorder = ArrayRecorder() # 配列式記録\n",
-    "\n",
-    "@time execute!(env, policy, recorder)"
+    "@time execute!(env)"
    ]
   },
   {
@@ -841,7 +871,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7 with sysimage 1.7.2",
+   "display_name": "Julia 1.7 with sysimage 1.7.3",
    "language": "julia",
    "name": "julia-1.7-with-sysimage-1.7"
   },
@@ -849,7 +879,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.2"
+   "version": "1.7.3"
   },
   "orig_nbformat": 4
  },
